<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">System UI</string>
    <string name="battery_low_title">Turn on Battery Saver?</string>
    <string name="battery_low_description">You have <xliff:g example="20%" id="percentage">%s</xliff:g> battery left. Battery Saver turns on Dark theme, restricts background activity, and delays notifications.</string>
    <string name="battery_low_intro">Battery Saver turns on Dark theme, restricts background activity, and delays notifications.</string>
    <string name="battery_low_percent_format"><xliff:g id="percentage">%s</xliff:g> remaining</string>
    <string name="invalid_charger_title">Can\'t charge via USB</string>
    <string name="invalid_charger_text">Use the charger that came with your device</string>
    <string name="battery_saver_confirmation_title">Turn on Battery Saver?</string>
    <string name="battery_saver_confirmation_title_generic">About Battery Saver</string>
    <string name="battery_saver_confirmation_ok">Turn on</string>
    <string name="battery_saver_start_action">Turn on</string>
    <string name="battery_saver_dismiss_action">No thanks</string>
    <string name="status_bar_settings_auto_rotation">Auto-rotate screen</string>
    <string name="status_bar_network_name_separator" translatable="false"> - </string>
    <string name="usb_device_permission_prompt">Allow <xliff:g example="Usb Mega Player" id="application">%1$s</xliff:g> to access <xliff:g example="USB Headphones" id="usb_device">%2$s</xliff:g>?</string>
    <string name="usb_device_permission_prompt_warn">Allow <xliff:g example="Usb Mega Player" id="application">%1$s</xliff:g> to access <xliff:g example="USB Headphones" id="usb_device">%2$s</xliff:g>?\nThis app has not been granted record permission but could capture audio through this USB device.</string>
    <string name="usb_audio_device_permission_prompt_title">Allow <xliff:g example="Usb Mega Player" id="application">%1$s</xliff:g> to access <xliff:g example="USB Headphones" id="usb_device">%2$s</xliff:g>?</string>
    <string name="usb_audio_device_confirm_prompt_title">Open <xliff:g example="Usb Mega Player" id="application">%1$s</xliff:g> to handle <xliff:g example="USB Headphones" id="usb_device">%2$s</xliff:g>?</string>
    <string name="usb_audio_device_prompt_warn">This app has not been granted record permission but could capture audio through this USB device. Using <xliff:g example="Usb Mega Player" id="application">%1$s</xliff:g> with this device might prevent hearing calls, notifications and alarms.</string>
    <string name="usb_audio_device_prompt">Using <xliff:g example="Usb Mega Player" id="application">%1$s</xliff:g> with this device might prevent hearing calls, notifications and alarms.</string>
    <string name="usb_accessory_permission_prompt">Allow <xliff:g example="Usb Mega Player" id="application">%1$s</xliff:g> to access <xliff:g example="USB Dock" id="usb_accessory">%2$s</xliff:g>?</string>
    <string name="usb_device_confirm_prompt">Open <xliff:g id="application">%1$s</xliff:g> to handle <xliff:g id="usb_device">%2$s</xliff:g>?</string>
    <string name="usb_device_confirm_prompt_warn">Open <xliff:g example="Usb Mega Player" id="application">%1$s</xliff:g> to handle <xliff:g example="USB Headphones" id="usb_device">%2$s</xliff:g>?\nThis app has not been granted record permission but could capture audio through this USB device.</string>
    <string name="usb_accessory_confirm_prompt">Open <xliff:g id="application">%1$s</xliff:g> to handle <xliff:g id="usb_accessory">%2$s</xliff:g>?</string>
    <string name="usb_accessory_uri_prompt">No installed apps work with this USB accessory. Learn more about this accessory at <xliff:g id="url">%1$s</xliff:g></string>
    <string name="title_usb_accessory">USB accessory</string>
    <string name="label_view">View</string>
    <string name="always_use_device">Always open <xliff:g id="application">%1$s</xliff:g> when <xliff:g id="usb_device">%2$s</xliff:g> is connected</string>
    <string name="always_use_accessory">Always open <xliff:g id="application">%1$s</xliff:g> when <xliff:g id="usb_accessory">%2$s</xliff:g> is connected</string>
    <string name="usb_debugging_title">Allow USB debugging?</string>
    <string name="usb_debugging_message">The computer\'s RSA key fingerprint is:\n<xliff:g id="fingerprint">%1$s</xliff:g></string>
    <string name="usb_debugging_always">Always allow from this computer</string>
    <string name="usb_debugging_allow">Allow</string>
    <string name="usb_debugging_secondary_user_title">USB debugging not allowed</string>
    <string name="usb_debugging_secondary_user_message">The user currently signed in to this device can\'t turn on USB debugging. To use this feature, switch to the primary user.</string>
    <string name="hdmi_cec_set_menu_language_title">Do you want to change the system language to <xliff:g example="German" id="language">%1$s</xliff:g>?</string>
    <string name="hdmi_cec_set_menu_language_description">System language change requested by another device</string>
    <string name="hdmi_cec_set_menu_language_accept">Change language</string>
    <string name="hdmi_cec_set_menu_language_decline">Keep current language</string>
    <string name="wifi_debugging_title">Allow wireless debugging on this network?</string>
    <string name="wifi_debugging_message">Network Name (SSID)\n<xliff:g example="My wifi" id="ssid">%1$s</xliff:g>\n\nWi\u2011Fi Address (BSSID)\n<xliff:g example="AB:CD:EF:12:34:56" id="bssid">%2$s</xliff:g></string>
    <string name="wifi_debugging_always">Always allow on this network</string>
    <string name="wifi_debugging_allow">Allow</string>
    <string name="wifi_debugging_secondary_user_title">Wireless debugging not allowed</string>
    <string name="wifi_debugging_secondary_user_message">The user currently signed in to this device can\u2019t turn on wireless debugging. To use this feature, switch to the primary user.</string>
    <string name="usb_contaminant_title">USB port disabled</string>
    <string name="usb_contaminant_message">To protect your device from liquid or debris, the USB port is disabled and won\u2019t detect any accessories.\n\nYou\u2019ll be notified when it\u2019s okay to use the USB port again.</string>
    <string name="usb_port_enabled">USB port enabled to detect chargers and accessories</string>
    <string name="usb_disable_contaminant_detection">Enable USB</string>
    <string name="learn_more">Learn more</string>
    <string name="global_action_screenshot">Screenshot</string>
    <string name="global_action_smart_lock_disabled">Smart Lock disabled</string>
    <string name="remote_input_image_insertion_text">sent an image</string>
    <string name="screenshot_saving_title">Saving screenshot\u2026</string>
    <string name="screenshot_saved_title">Screenshot saved</string>
    <string name="screenshot_failed_title">Couldn\'t save screenshot</string>
    <string name="screenshot_failed_to_save_user_locked_text">Device must be unlocked before screenshot can be saved</string>
    <string name="screenshot_failed_to_save_unknown_text">Try taking screenshot again</string>
    <string name="screenshot_failed_to_save_text">Can\'t save screenshot</string>
    <string name="screenshot_failed_to_capture_text">Taking screenshots isn\'t allowed by the app or
        your organization</string>
    <string name="screenshot_blocked_by_admin">Taking screenshots is blocked by your IT admin</string>
    <string name="screenshot_edit_label">Edit</string>
    <string name="screenshot_edit_description">Edit screenshot</string>
    <string name="screenshot_share_description">Share screenshot</string>
    <string name="screenshot_scroll_label">Capture more</string>
    <string name="screenshot_dismiss_description">Dismiss screenshot</string>
    <string name="screenshot_preview_description">Screenshot preview</string>
    <string name="screenshot_top_boundary_pct">Top boundary <xliff:g example="50" id="percent">%1$d</xliff:g> percent</string>
    <string name="screenshot_bottom_boundary_pct">Bottom boundary <xliff:g example="50" id="percent">%1$d</xliff:g> percent</string>
    <string name="screenshot_left_boundary_pct">Left boundary <xliff:g example="50" id="percent">%1$d</xliff:g> percent</string>
    <string name="screenshot_right_boundary_pct">Right boundary <xliff:g example="50" id="percent">%1$d</xliff:g> percent</string>
    <string name="screenrecord_name">Screen Recorder</string>
    <string name="screenrecord_background_processing_label">Processing screen recording</string>
    <string name="screenrecord_channel_description">Ongoing notification for a screen record session</string>
    <string name="screenrecord_start_label">Start Recording?</string>
    <string name="screenrecord_description">While recording, Android System can capture any sensitive information that\u2019s visible on your screen or played on your device. This includes passwords, payment info, photos, messages, and audio.</string>
    <string name="screenrecord_audio_label">Record audio</string>
    <string name="screenrecord_device_audio_label">Device audio</string>
    <string name="screenrecord_device_audio_description">Sound from your device, like music, calls, and ringtones</string>
    <string name="screenrecord_mic_label">Microphone</string>
    <string name="screenrecord_device_audio_and_mic_label">Device audio and microphone</string>
    <string name="screenrecord_start">Start</string>
    <string name="screenrecord_ongoing_screen_only">Recording screen</string>
    <string name="screenrecord_ongoing_screen_and_audio">Recording screen and audio</string>
    <string name="screenrecord_taps_label">Show touches on screen</string>
    <string name="screenrecord_stop_label">Stop</string>
    <string name="screenrecord_share_label">Share</string>
    <string name="screenrecord_save_title">Screen recording saved</string>
    <string name="screenrecord_save_text">Tap to view</string>
    <string name="screenrecord_delete_error">Error deleting screen recording</string>
    <string name="got_it">Got it</string>
    <string name="inline_ok_button">Apply</string>
    <string name="inline_turn_off_notifications">Turn off notifications</string>
    <string name="notification_silence_title">Silent</string>
    <string name="notification_alert_title">Default</string>
    <string name="notification_automatic_title">Automatic</string>
    <string name="notification_channel_summary_low">No sound or vibration</string>
    <string name="notification_channel_summary_default">May ring or vibrate based on phone settings</string>
    <string name="notification_channel_summary_automatic">Have the system determine if this notification should make sound or vibration</string>
    <string name="notification_unblockable_desc">These notifications can\'t be modified.</string>
    <string name="notification_unblockable_call_desc">Call notifications can\'t be modified.</string>
    <string name="notification_multichannel_desc">This group of notifications cannot be configured here</string>
    <string name="notification_delegate_header">Proxied notification</string>
    <string name="notification_more_settings">More settings</string>
    <string name="notification_app_settings">Customize</string>
    <string name="nav_bar">Navigation bar</string>
    <string name="nav_bar_layout">Layout</string>
    <string name="left_nav_bar_button_type">Extra left button type</string>
    <string name="right_nav_bar_button_type">Extra right button type</string>
    <string name="left_keycode">Left keycode</string>
    <string name="right_keycode">Right keycode</string>
    <string name="left_icon">Left icon</string>
    <string name="right_icon">Right icon</string>
    <string name="select_conversation_title">Conversation widgets</string>
    <string name="no_conversations_text">Your recent conversations will show up here</string>
</resources>