<!--
  ~ Copyright (C) 2021 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:androidprv="http://schemas.android.com/apk/prv/res/android"
    android:id="@+id/top_level"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:padding="24dp">

    <TextView
        android:id="@+id/select_conversation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/select_conversation_title"
        android:textAppearance="@*android:style/TextAppearance.DeviceDefault.ListItem"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/select_conversation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_conversation_title"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:padding="24dp"
        android:text="@string/no_conversations_text"
        android:textAppearance="@*android:style/TextAppearance.DeviceDefault.ListItem"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp" />

    <Button
        android:id="@+id/got_it_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:background="@drawable/rounded_bg_full_large_radius"
        android:onClick="dismissActivity"
        android:text="@string/got_it"
        android:textColor="?androidprv:attr/textColorOnAccent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/got_it_button"
        android:layout_below="@id/select_conversation"
        android:layout_centerInParent="true"
        android:clipToOutline="true">

        <LinearLayout
            android:id="@+id/widget_initial_layout"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_above="@id/got_it_button"
            android:layout_gravity="center"
            android:background="@drawable/rounded_bg_full_large_radius">

            <include layout="@layout/people_space_placeholder_layout" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>